[package]
name = "demo-rust-axum-tracing-subscriber"
version = "1.0.0"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
license = "GPL-2.0 OR GPL-3.0"
homepage = "https://github.com/joelparkerhenderson/demo-rust-axum-tracing-subscriber"
repository = "https://github.com/joelparkerhenderson/demo-rust-axum-tracing-subscriber"
documentation = "https://github.com/joelparkerhenderson/demo-rust-axum-tracing-subscriber"

description = """
Demo of Rust and Axum + tracing subscriber:

https://github.com/joelparkerhenderson/demo-rust-axum-tracing-subscriber

Demo of Rust and Axum + parent project:

https://github.com/joelparkerhenderson/demo-rust-axum
"""

readme = "README.md"
keywords = ["demo", "rust", "axum", "web"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" } # Web framework that focuses on ergonomics and modularity.
tokio = { version = "1.40.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
tracing = { version = "0.1.40" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } # Utilities for implementing and composing `tracing` subscribers. 
